@@ -13,6 +13,7 @@ pipeline {
         --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
         --add-exports jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
         --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+        --add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
     '''    
     }
 
